# OpenGLRenderer

./: .clang-format  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt
Assets/Models/9mm/: scene.gltf
Assets/Models/9mmfbx/source/: 9mm.fbx
Assets/Models/Gun/: Gun.mtl
Assets/Models/WoodenBox/: default.mtl
Assets/Models/african_head/: african_head.mtl
Assets/Shaders/: BPDeferredGeometryPass.frag  BPDeferredLightPass.frag  BPForwardLit.frag  Billboard.frag  Billboard.vert  DeferredGeometryPass.frag  DeferredGeometryPass.vert  DeferredLightPass.frag  DepthPass.geom  DepthPass.vert  Fallback.frag  FallbackModel.vert  ForwardLit.vert  Lit.frag  Lit.vert  LitInstanced.vert  PBR.frag  PBRDeferredGeometryPass.frag  PBRDeferredLightPass.frag  PBRForwardLit.frag  ShadowMapLit.frag  ShadowMapLit.vert  SimpleDepthShader.vert  SingleColor.frag
Assets/Shaders/Billboard/: Billboard.frag
Assets/Shaders/Deferred/: DeferredAmbientPass.frag  DeferredGeometryPass.frag  DeferredGeometryPass.vert  DeferredLightPass.frag  DeferredLightPass.vert  DeferredPointLightPass.frag  DeferredPostProcessPass.frag  DeferredPostProcessPass.vert  DeferredSunLightPass.frag
Assets/Shaders/Deferred/Debug/: ShadowCascadesViz.frag  ShadowCascadesViz.vert
Assets/Shaders/Fallback/: Fallback.frag  Fallback.vert  FallbackSkybox.vert
Assets/Shaders/Forward/: ForwardLit.frag  ForwardLit.vert  ForwardSun.frag
Assets/Shaders/ShadowMap/: DepthPass.frag  DepthPassLayered.geom  ShadowPass.geom  ShadowPass.vert  ShadowPassPoint.frag  ShadowPassPoint.geom  ShadowPassSun.geom
Assets/Shaders/Skybox/: Skybox.vert
Source/: Aliases.hpp  Benchmark.cpp  Benchmark.hpp  Billboard.cpp  Billboard.hpp  Camera.cpp  Camera.hpp  Cube.cpp  Cube.hpp  Debug.hpp  FileWatcher.cpp  FileWatcher.hpp  Framebuffer.cpp  Framebuffer.hpp  Frustum.cpp  Frustum.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Point.hpp  Quad.cpp  Quad.hpp  Render.cpp  Render.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  Texture.cpp  Texture.hpp  Transform.hpp  (+7 more)
Source/Utilities/: DebugBreak.hpp  Hash.hpp
